--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.0"
 beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 pypdf2 = "^3.0.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
