--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
-httpx = "^0.26.0"
+pytest-cov = "^4.1.0"
+httpx = "^0.25.2"  # For TestClient
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
