--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,17 @@ services:
       timeout: 10s
       retries: 3
     command: poetry run uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://api:8000
+    depends_on:
+      - api
