--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^3.1.6",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "next-themes": "^0.4.4",
     "postcss": "^8.4.49",
